# librtmp

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cn/fabric/librtmp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/polarssl/: config.h
app/src/main/java/cn/fabric/librtmp/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/cn/fabric/librtmp/: ExampleUnitTest.java
